ADD_LIBRARY(ros-bridge
  RosBridge.cpp
)

MESSAGE("BIN DIR: ${CMAKE_INSTALL_PREFIX}")
TARGET_INCLUDE_DIRECTORIES(ros-bridge PUBLIC 
  $<BUILD_INTERFACE:${CATKIN_DEVEL_PREFIX}/include/bridge>
  $<BUILD_INTERFACE:${CMAKE_INSTALL_PREFIX}/include/bridge>
)

INSTALL(TARGETS ros-bridge LIBRARY DESTINATION lib)